dumping go  backend till templates are flushed out

--- a/Templates/Blog.html
+++ b/Templates/Blog.html
@@ -1,7 +1,7 @@
 <!-- Extend the base layout -->
 {% extends "Frame.html" %}
 
-<link rel="stylesheet" href="/Static/Blog.css">
+<link rel="stylesheet" href="Blog.css">
 
 {% block content %}
 <section>
