--- a/Templates/Credits.html
+++ b/Templates/Credits.html
@@ -1,7 +1,7 @@
 <!-- Extend the base layout -->
 {% extends "Frame.html" %}
 
-<link rel="stylesheet" href="/Static/Credits.css">
+<link rel="stylesheet" href="Credits.css">
 
 {% block content %}
 <section>
