--- a/Templates/Failures.html
+++ b/Templates/Failures.html
@@ -1,7 +1,7 @@
 <!-- Extend the base layout -->
 {% extends "Frame.html" %}
 
-<link rel="stylesheet" href="/Static/Failures.css">
+<link rel="stylesheet" href="Failures.css">
 
 {% block content %}
 <section>
