--- a/Templates/Welcome.html
+++ b/Templates/Welcome.html
@@ -1,7 +1,7 @@
 <!-- Extend the base layout -->
 {% extends "Frame.html" %}
 
-<link rel="stylesheet" href="/Static/Welcome.css">
+<link rel="stylesheet" href="Welcome.css">
 
 {% block content %}
 <section>
