--- a/Templates/Frame.html
+++ b/Templates/Frame.html
@@ -47,7 +47,7 @@
   <meta charset=" UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cosmic_Misfits</title>
-  <link rel="stylesheet" href="/Static/Frame.css">
+  <link rel="stylesheet" href="Frame.css">
 </head>
 
 <body>
