--- a/Templates/Projects.html
+++ b/Templates/Projects.html
@@ -1,7 +1,7 @@
 <!-- Extend the base layout -->
 {% extends "Frame.html" %}
 
-<link rel="stylesheet" href="/Static/Projects.css">
+<link rel="stylesheet" href="Projects.css">
 
 {% block content %}
 <section>
