--- a/Templates/Credits.html
+++ b/Templates/Credits.html
@@ -8,5 +8,8 @@
   <h1>Contact</h1>
   <p>Get in touch with me.</p>
   <!-- Contact form or information loaded dynamically with HTMX -->
+  <p>Tanks to those who helped!
+    <a href="https://www.flaticon.com/free-icons/brands-and-logotypes" title="brands and logotypes icons">Brands and logotypes icons created by Freepik - Flaticon</a>
+  </p>
 </section>
 {% endblock %}
