--- a/Templates/Frame.html
+++ b/Templates/Frame.html
@@ -11,15 +11,13 @@
 <body>
   <header>
     <div class="navagation">
-      <nav>
-        <ul class="navagation-links">
-          <li><a href="./Welcome.html" hx-get="/welcome" hx-target="#content">Welcome</a></li>
-          <li><a href="./Blog.html" hx-get="/blog" hx-target="#content">Blog</a></li>
-          <li><a href="./Projects.html" hx-get="/projects" hx-target="#content">Projects</a></li>
-          <li><a href="./Failures.html" hx-get="/failures" hx-target="#content">Failures</a></li>
-          <li><a href="./Credits.html" hx-get="/credits" hx-target="#content">Credits</a></li>
-        </ul>
-      </nav>
+      <ul class="navagation-links">
+        <li><a href="./Welcome.html" hx-get="/welcome" hx-target="#content">Welcome</a></li>
+        <li><a href="./Blog.html" hx-get="/blog" hx-target="#content">Blog</a></li>
+        <li><a href="./Projects.html" hx-get="/projects" hx-target="#content">Projects</a></li>
+        <li><a href="./Failures.html" hx-get="/failures" hx-target="#content">Failures</a></li>
+        <li><a href="./Credits.html" hx-get="/credits" hx-target="#content">Credits</a></li>
+      </ul>
     </div>
   </header>
 
@@ -39,14 +37,14 @@
         </div>
         <div class="col-md-4">
           <ul class="social-links">
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://twitter.com/YOUR_TWITTER_USERNAME"><img src="../db/logos/twitter.png" alt="Twitter logo"></a></li>
+            <li><a href="https://github.com/YOUR_GITHUB_USERNAME_OR_REPO"><img src="../db/logos/github.png" alt="GitHub logo"></a></li>  
           </ul>
         </div>
       </div>
         <div class="row">
           <div class="col-md-12 text-center">
-            <p>&copy; 2023 Your Name. All rights reserved.</p>
+            <p>&copy; 2023 Liam Price. All rights reserved.</p>
           </div>
         </div>
      </div>
